Task_3_Kubernetes_Cluster_Setup/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-http-server
spec:
  selector:
    app: simple-http-server
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
